<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/layout_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/deviceLable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_weight="0"
                    android:text="@string/lable_device_name"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_weight="0"
                    android:contentDescription=""
                    android:text="  :  "
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/deviceName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/deviceLable"
                    android:layout_toRightOf="@+id/deviceLable"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/black"
                    tools:text="Galaxy S4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/deviceIdLable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/deviceName"
                    android:layout_toLeftOf="@+id/deviceName"
                    android:layout_toStartOf="@+id/deviceName"
                    android:contentDescription="Serial Number of the device"
                    android:gravity="center|left|start"
                    android:text="@string/serialNumberLabel"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_weight="0"
                    android:contentDescription=""
                    android:text="  :  "
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/serialNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/deviceIdLable"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/deviceIdLable"
                    android:layout_toRightOf="@+id/deviceIdLable"
                    android:gravity="left|start|center"
                    android:maxLines="3"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/black"
                    tools:text="hsdjah3478873483weie" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Scan Device Info" />

            <ImageButton
                android:id="@+id/scanDevice"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="scan device info"
                android:onClick="scanDevice"
                android:scaleType="fitXY"
                android:src="@drawable/scan_qr_code" />
        </LinearLayout>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/deviceLable"
            android:layout_toLeftOf="@+id/scanDevice"
            android:layout_toRightOf="@+id/deviceLable"
            android:layout_toStartOf="@+id/scanDevice"
            android:text="Enter User ID below"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter/Scan User Id" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Scan User Info"
                android:visibility="invisible" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/checkOut"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="90dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/button_checkout"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/checkIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="90dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/button_checkin"
                android:textColor="@android:color/white" />
        </LinearLayout>


    </LinearLayout>
</FrameLayout>